--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,15 +5,13 @@
         "editor.formatOnSave": true,
     },
     "blade.format.enable": true,
-    "[blade]": {
-        "editor.autoClosingBrackets": "always",
-        "editor.defaultFormatter": "onecentlin.laravel-blade"
-    },
     "bladeFormatter.format.enabled": true,
     "[blade]": {
-        "editor.defaultFormatter": "shufo.vscode-blade-formatter"
+        "editor.autoClosingBrackets": "always",
+        "editor.defaultFormatter": "onecentlin.laravel-blade",
+        "editor.formatOnSave": true,
     },
-    "editor.fontSize": 15,
+    "editor.fontSize": 16,
     "laravelDocs.version": "10.x",
     "LaravelExtraIntellisense.modelsPaths": ["app", "app/Models"],
     "laravel_goto_view.extensions": [
@@ -23,8 +21,28 @@
     "[php]": {
         "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
     },
-    "files.associations": {
-        "*.env.development": "env",
-        "*.env.production": "env"
-    }
+    // Font Awesome version to use.
+    "fontAwesomeAutocomplete.version": "5",
+    // List of glob patterns that determine where Font Awesome 5 Autocomplete will provide suggestions.
+    "fontAwesomeAutocomplete.patterns": [
+        "**/*.html",
+        "**/*.blade.php"
+    ],
+    // A word that triggers the autocompletion of Font Awesome icons. Last character of the trigger word is also the trigger character for autocompletion menu.
+    "fontAwesomeAutocomplete.triggerWord": "fa-",
+    // A list of glob patterns for which the extension should NOT auto-remove the trigger word when a font class name is inserted from the autocompletion list.
+    "fontAwesomeAutocomplete.disableTriggerWordAutoClearPatterns": ["**/*.html", "**/*.blade.php"],
+    // Background color of a Font Awesome icon preview. Supports any valid CSS color.
+    "fontAwesomeAutocomplete.preview.backgroundColor": "#ffffff",
+    // Foreground color of a Font Awesome icon preview. Supports any valid CSS color.
+    "fontAwesomeAutocomplete.preview.foregroundColor": "#000000",
+    // Allows overriding the inserted text per file type when an autocompletion item is selected.
+    // Available template placeholders are {style}, {styleName}, {name}, and {prefix}.
+    // {name} supports the following formatters: camelCase, kebabCase, pascalCase, and snakeCase. Usage: {name:formatter}, e.g. {name:camelCase}
+    "fontAwesomeAutocomplete.insertionTemplate": {
+        "**/*.html": "{style} {prefix}{name}",
+        "**/*.blade.php": "{style} {prefix}{name}"
+    },
+    // Artificially increases the importance of completion items. Enabled by default as FontAwesome Autocomplete extension only provides suggestions based on the triggerWord setting.
+    "fontAwesomeAutocomplete.enableElevatedSortPriority": true
 }
