Criada listagem de triggers para PM Ourihos

--- a/.env.example
+++ b/.env.example
@@ -79,3 +79,8 @@ PROXMOX_SECRET=""
 ZABBIX_HOST=http://your.zabbix.url
 ZABBIX_USERNAME=username
 ZABBIX_PASSWORD=password
+
+ZABBIX_HOST=http://your.zabbix.url
+ZABBIX_USERNAME=username
+ZABBIX_PASSWORD=password
+ZABBIX_PATH_API='/zabbix/api_jsonrpc.php'
