--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,49 +1,38 @@
 {
+    "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "terminal.integrated.fontFamily": "monospace",
+    "editor.fontFamily": "Fira Code",
+    "editor.fontSize": 18,
+    "editor.lineHeight": 24,
+    "editor.fontLigatures": true,
+    "editor.rulers": [100, 120],
+    "editor.renderLineHighlight": "gutter",
+    "explorer.compactFolders": false,
+    "workbench.iconTheme": "material-icon-theme",
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true,
+        "editor.formatOnSave": true
     },
-    "blade.format.enable": true,
-    "bladeFormatter.format.enabled": true,
-    "[blade]": {
-        "editor.autoClosingBrackets": "always",
-        "editor.defaultFormatter": "onecentlin.laravel-blade",
-        "editor.formatOnSave": true,
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true
     },
-    "editor.fontSize": 20,
-    "terminal.integrated.fontSize": 18,
-    "laravelDocs.version": "10.x",
-    "LaravelExtraIntellisense.modelsPaths": ["app", "app/Models"],
-    "laravel_goto_view.extensions": [
-        ".blade.php",
-        ".inky.php"
-    ],
+    // "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
+    "editor.formatOnPaste": false, // required
+    "editor.formatOnType": false, // required
+    // "editor.formatOnSave": true, // optional
+    "editor.formatOnSaveMode": "file", // required to format on save
+    "files.autoSave": "off", // optional but recommended
+    "vs-code-prettier-eslint.prettierLast": "false",
+    "cSpell.enabled": false, // set as "true" to run 'prettier' last not first
+
+    // PHP Doc
+    "php-docblocker.author": {
+        "name": "Luan Santos",
+        "email": "lvluansantos@gmail.com"
+    },
     "[php]": {
         "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
-    },
-    // Font Awesome version to use.
-    "fontAwesomeAutocomplete.version": "5",
-    // List of glob patterns that determine where Font Awesome 5 Autocomplete will provide suggestions.
-    "fontAwesomeAutocomplete.patterns": [
-        "**/*.html",
-        "**/*.blade.php"
-    ],
-    // A word that triggers the autocompletion of Font Awesome icons. Last character of the trigger word is also the trigger character for autocompletion menu.
-    "fontAwesomeAutocomplete.triggerWord": "fa-",
-    // A list of glob patterns for which the extension should NOT auto-remove the trigger word when a font class name is inserted from the autocompletion list.
-    "fontAwesomeAutocomplete.disableTriggerWordAutoClearPatterns": ["**/*.html", "**/*.blade.php"],
-    // Background color of a Font Awesome icon preview. Supports any valid CSS color.
-    "fontAwesomeAutocomplete.preview.backgroundColor": "#ffffff",
-    // Foreground color of a Font Awesome icon preview. Supports any valid CSS color.
-    "fontAwesomeAutocomplete.preview.foregroundColor": "#000000",
-    // Allows overriding the inserted text per file type when an autocompletion item is selected.
-    // Available template placeholders are {style}, {styleName}, {name}, and {prefix}.
-    // {name} supports the following formatters: camelCase, kebabCase, pascalCase, and snakeCase. Usage: {name:formatter}, e.g. {name:camelCase}
-    "fontAwesomeAutocomplete.insertionTemplate": {
-        "**/*.html": "{style} {prefix}{name}",
-        "**/*.blade.php": "{style} {prefix}{name}"
-    },
-    // Artificially increases the importance of completion items. Enabled by default as FontAwesome Autocomplete extension only provides suggestions based on the triggerWord setting.
-    "fontAwesomeAutocomplete.enableElevatedSortPriority": true
+    }
 }
